// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component matches snapshot (disabled) 1`] = `
<label
  className="fdsCheckable fdsCheckbox flush--bottom fdsCheckable--disabled"
>
  <input
    className="media--xs"
    disabled={true}
    name="snapshot_checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    aria-hidden={true}
    className="fdsCheckable--icon"
    style={
      Object {
        "pointerEvents": "none",
      }
    }
  >
    <CheckEmptyIcon
      color="#a2a0a0"
      size="xs"
    />
  </span>
  <span
    className="padding--left--half color--secondary"
  >
    Snapshot Label
  </span>
</label>
`;

exports[`Checkbox component matches snapshot (with label) 1`] = `
<label
  className="fdsCheckable fdsCheckbox flush--bottom"
>
  <input
    className="media--xs"
    disabled={false}
    name="snapshot_checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    aria-hidden={true}
    className="fdsCheckable--icon"
    style={
      Object {
        "pointerEvents": "none",
      }
    }
  >
    <CheckEmptyIcon
      color="rgba(64, 64, 64, 0.60)"
      size="xs"
    />
  </span>
  <span
    className="padding--left--half"
  >
    Snapshot Label
  </span>
</label>
`;

exports[`Checkbox component matches snapshot (without label) 1`] = `
<div
  className="fdsCheckable fdsCheckbox flush--bottom"
>
  <input
    className="media--xs"
    disabled={false}
    name="snapshot_checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    aria-hidden={true}
    className="fdsCheckable--icon"
    style={
      Object {
        "pointerEvents": "none",
      }
    }
  >
    <CheckEmptyIcon
      color="rgba(64, 64, 64, 0.60)"
      size="xs"
    />
  </span>
</div>
`;
